BetterDiscord/main.css
/* ... */
.pencilContainer-18TrEJ {border-radius: var(--server-radius);}
.additionalActionsIcon-3Cy8UU {padding: 4px;}
.additionalActionsIcon-3Cy8UU:hover {background: var(--background-tertiary);}
/* Activity */
.root-g14mjS .bodyAlignCenter-3E27PU, .bodyNormal-250CQK {padding: 8px;}
.userProfileActivity-sal5no {margin-bottom: 8px; padding: 0px;}
/* User Info Section | USRBG */
.userBio-2-tr00 {
  background-color: var(--popout-background-main);
  margin-top: -8px;
  padding: 4px;
  border-radius: 0 0 var(--server-radius) var(--server-radius);
}
.note-3M15gE {
  border-radius: 0px;
  margin-right: 4px;
  margin-left: -4px;
  margin-top: 0px;
}
.note-3M15gE textarea {
  border-radius: 0 0 var(--server-radius) var(--server-radius);
  margin-left: 4px;
}
.userInfoSectionHeader-2mYYun {
  text-align: center;
  background-color: var(--popout-title);
  border-radius: var(--server-radius) var(--server-radius) 0px 0px;
  margin-bottom: 0px;
}
/* Activity & Mutual Servers sections | USRBG  */
.listRow-2nO1T6 {border-radius: var(--server-radius); margin: 1px 0 4px 0px; padding: 0px !important;}
.listScroller-entkMk {padding: 8px 8px 0px 8px !important;}

:root .root-8LYsGj .activityProfile-1712BN .contentImagesProfile-27BIzt::after,
:root .root-8LYsGj .activityProfile-1712BN .contentGameImageProfile-24ty00::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -2;
  left: 0;
  top: 0;
  background: #7289da;
}
:root .root-8LYsGj .activityProfile-1712BN .timeBarProfile-1z_HH-::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
  left: 0;
  top: 0;
  background: #1db954;
}
:root .root-8LYsGj .activityProfile-1712BN .spotifyIcon-2J9kSv {
  display: none !important;
}
/* Connected Accounts | USRBG */
:root .root-8LYsGj .body-1Ukv50 {
  z-index: 1;
  background-color: var(--background-secondary);
}

/* ============> New User Profile Modal <============ */
.infoScroller-3MqKC5.thin-31rlnD.scrollerBase-_bVAAt.fade-1R6FHN {
  display: grid !important;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 8px;
  overflow: auto;
  padding: 8px 8px 0px 8px !important;
}
/* Colours? */
.root-2uUafN .userProfileInnerThemedWithBanner-2624Yx, .userProfileInnerThemedNonPremium-1gT-zY, .userProfileInnerThemedPremiumWithoutBanner-1yMS1H {background: var(--background-secondary) !important;}
.root-2uUafN .userProfileInner-3F03PX:before, .userProfileInner-3F03PX:before {background-color: transparent;} /* Bye Gradient for light theme */
.root-2uUafN .userProfileInnerThemedWithBanner-2624Yx, .root-2uUafN .overlayBackground-1KgwVi {background: var(--background-secondary) !important;}
/* Name */
.container-1U-qVy {padding: 0px 12px 0;}
/* User Info section colours */
.root-2uUafN .userInfoSectionHeader-48g5Qj {background: var(--popout-title); margin-bottom: 0px; text-align: center;}
.root-2uUafN .userInfoText-3GOMzH.markup-eYLPri {background: var(--popout-background-main);}
.root-2uUafN .memberSinceContainer-3biwiY {background: var(--popout-background-main); margin-bottom: 6px;}
.root-2uUafN .note-3TX9O7, .note-3TX9O7 textarea:focus {background: var(--popout-background-main); margin: 0px;}
/* Connected Accounts */
.connectedAccounts-1HaiEx.userInfoSection-1gptv0:not(:hover) .text-xs-normal-3O7EaX {display: none;} /* Removes extra info unless hovered on */
.userPanelOverlayBackground-3xwDMp, .userProfileModalOverlayBackground-8p3-eU {margin: 0px;}
.userInfoSection-1gptv0+ .userInfoSection-1gptv0 {border-top: none; justify-content: center;}
.connectedAccountContainer-2TWiXT {
  margin-top: 0px;
  padding: 8px;
  border-radius: var(--server-radius);
  border: 1px solid var(--border-color);
}
.connectedAccounts-1HaiEx {
  display: grid !important;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 6px;
  overflow: auto;
}
.userInfoSection-1gptv0 {padding: 0px;}
/* How the connected textures should work */
.connectedAccounts-1HaiEx.userInfoSection-1gptv0, .connectedAccountsColumn-1I3naf {row-gap: 6px; column-gap: 6px; height: -webkit-fill-available;}
.connectedAccountsColumn-1I3naf {width: 100%; height: -webkit-fill-available;}
.connectedAccountsColumn-1I3naf+ .connectedAccountsColumn-1I3naf {margin-left: 0px;}
/* ===> Positioning of the top section <=== */
.root-2uUafN .topSection-1Khgkv {margin-bottom: 0px;}
.root-2uUafN .header-1_vWwx {
  position: absolute;
  top: 80px;
  width: -webkit-fill-available;
}
.root-2uUafN .avatar-1YsFQ1 { /* Avatar */
  position: absolute;
  top: -68px;
  left: 10px;
}
.root-2uUafN svg.bannerSVGWrapper-qc0szY { /* Banner */
  height: 212px;
  min-height: 212px !important;
}
.root-2uUafN .headerTop-212g15 { /* Badges & Send Friend Request */
  position: absolute;
  top: 90px;
  right: 16px;
  left: 10px;
  align-items: center;
}
.root-2uUafN .container-1U-qVy .nameTag-2ysfG3.nameTag-H6kSJ0 { /* Username */
  position: fixed;
  left: 15px;
  top: 145px;
  padding: 0px;
  z-index: 1001;
}
/* ==> Tabs section = godly <=== */
.body-_QAKrE {border-radius: var(--server-radius);}
.tabBar-2StdUa {
  gap: 2px;
  justify-content: center;
  height: 40px;
  padding: 2px 0px !important;
}
.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, .top-K_jibn .themed-2-lozF.item-3XjbnG:active {
  border-bottom-color: var(--mention-color);
  background: rgba(var(--accent), 0.1);
}
.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
  border-bottom-color: var(--mention-color);
}
/* Tab Bars */
.root-2uUafN .tabBarItem-3VvT2z {
  display: flex;
  width: 147.5px;
  align-items: center;
  justify-content: center;
  background: var(--background-tertiary);
}
.root-2uUafN .tabBarContainer-2UG0vy {margin: 0px; border-color: transparent; background: var(--background-primary);}
.root-2uUafN .divider-1NpGam {margin: 0px; border-color: transparent;}
/* ==> Profile popup profile custom image for non premium users <== */
.root-2uUafN .profileBanner-2zIsK7 {
  filter: brightness(0.6);
}
/* ... */

